--- a/text/conclusions.tex
+++ b/text/conclusions.tex
@@ -26,15 +26,22 @@ This enabled accurate quantification of physical networks, and tied them into th
 The development of algorithmic methods and associated theory to model physical networks allowed for a series of high\--level investigations into the structures of different systems.
 Generic disordered networks were found to have a ring structure which was consistent with \lm's maximum entropy law.
 This implied that any pore distribution in disordered media would be heavily constrained by this law.
-The specific arrangement of these rings, as measured by the assortativity, was shown to influence by the balance of bond stretch and angle terms in the underlying potential model.
+The specific arrangement of these rings, as measured by the assortativity, was shown to be influenced by the balance of bond stretch and angle terms in the underlying potential model.
+The choice of potential model, coupled with appropriate selection of the average coordination number, allowed configurations with assortative behaviour to be generated, in contrast to most physical networks which are disassortative.  
+
 However, a system was eventually found which violated \lm's law.
 Procrystalline lattices, which have a high symmetry atomic lattice but disordered ring structure, were demonstrated to have fundamentally different network properties to either the crystalline or amorphous state, and therefore have the potential to display unique transport properties.
 Furthermore, the balance of order and disorder in procrystals was dependent on the nature of the underlying lattice and the atomic coordination number.
 
 The study of experimental \td{} networks also led to some more novel topics in analysis.
 In particular, following on from network analysis of colloids, a detailed study was undertaken on the use of Voronoi diagrams with polydisperse hard sphere monolayers.
+The topological properties of weighted and unweighted variants of Voronoi diagrams were analysed and compared.
 This yielded the result that an unweighted Voronoi diagram was appropriate and had a well defined meaning in this context, likely of some reassurance to experimentalists.
+
 In addition, an attempt to find the ring structure in experimental microscopy images via persistent homology led to a broader examination of the utility of the technique in characterising amorphous materials.
+It was demonstrated that in certain \td{} systems where relatively strong constraints on bond lengths and angles are imposed (such as triangle rafts), characteristic bands appear in the persistence diagrams which can be related to successive nearest\--neighbour interactions.
+This can provide greater information than that afforded by traditional measures such as RDFs, which derive solely from pair correlations. 
+In addition, the evolution in Betti numbers were shown to correlate well with the primitive rings in the system.
 Here again, the ability to generate samples computationally for different systems with controlled levels of disorder was key to interpreting the band structure in persistence diagrams.
 
 This work has hopefully also opened up further avenues for research.
