--- a/text/introduction.tex
+++ b/text/introduction.tex
@@ -117,7 +117,7 @@ This partial ordering raises the possibility of procrystals displaying fundament
 
 Finally, a new tool from topological data analysis, termed persistent homology, will be applied to \td{} amorphous materials.
 The aim of persistent homology is to find the fundamental topological features in generic point sets, and so holds the potential to identify and characterise the ring structure in atomic networks \cite{Wasserman2018}.
-Although the method is in its relative infancy, the effectiveness of persistent homology in quantifying disorder in the case of \td{} materials can be examined ahead of time through the use of computational models.
+Although the method is in its relative infancy, the effectiveness of persistent homology in quantifying disorder in the case of \td{} materials can be examined through the use of computational models.
 
 These interrelated examples raise two important questions central to this work, namely why is the focus on \td{} systems, and why on computational modelling?
 To answer the first of these questions, one may argue it is precisely because there exist experimental realisations of quasi\--two\--dimensional systems, which have a range of technologically useful applications \cite{Butler2013,Bhimanapati2015,Tan2017}.
@@ -131,7 +131,7 @@ From this data, metrics such as the ring structure are well defined and readily 
 This in turn allows the development of simulation and analysis methods which are able to accurately model and characterise the system, leading to a more complete understanding.
 Ideally, the insight gained can be applied to higher dimensions, or used to aid the synthesis of materials with desired properties.
 
-In response to the second question, the power of computational modelling as complement to experiment arises from the ability to reproduce experimental results, but also explore experimentally inaccessible systems.
+In response to the second question, the power of computational modelling as a  complement to experiment arises not only from the ability to reproduce experimental results, but also from the potential to perform idealised experiments \textit{in silico}.% and explore experimentally inaccessible systems.
 As previously mentioned, experimental microscopy data from frontier research is difficult to produce and may be incomplete or relatively small in extent.
 Computational models can help to bridge any gaps and provide information as to the frequency or stability of the observed sample.
 Moreover, computation has direct access to a greater number of observables than experiment, which can help provide explanation for a given phenomenon.
@@ -149,38 +149,4 @@ Nevertheless, the motivation for this work is still ultimately grounded in the c
 Contact will therefore be made to experimental results and the applicability and relevance to experimental investigations will be detailed throughout.
 In particular, this thesis will aim to improve the modelling of amorphous bilayers, evaluate analysis methods for thin\--films and colloidal packings, and direct the synthesis of procrystalline materials.  
 
-%\section{Thesis Structure}
-%
-%The structure of this thesis is as follows:
-%\davidnote{Todo: thesis structure}
-%\davidnote{Just basically a repeat of abstracts?}
-%\davidnote{Actually can this section just go?}
-%
-%\begin{itemize}
-%	\item \textbf{Chapter 2}: the theory underpinning complex networks is discussed, covering the representation of atomic systems as networks and the relationship of the dual network to ring structure.
-%The laws which govern the topological properties of physical networks are also introduced, namely Euler's law, \lm's law and the \aw{} law.
-%
-%	\item \textbf{Chapter 3}: the theoretical basis of \mc{} methods and their application to generating realisations of \td{} networks is reviewed.
-%There is a broad discussion of Metropolis \mc{} methods, before specific methods are covered in detail; namely the bond switching algorithm and hard particle \mc{} in conjunction with the Voronoi construction.
-%This discussion lays the groundwork for the extension of these methods and development of additional \mc{} algorithms in subsequent chapters.
-%	
-%	\item \textbf{Chapter 4}: a computationally tractable \mc{} method using triangle rafts is developed to generate bilayers of \sioii{} and related materials.
-%The method allows defect free networks of any given shape to be grown with both tuneable ring statistics and topologies, controlled by a combination of the choice of the ``allowed'' rings and the effective growth ``temperature''. 
-%Configurations are generated with \aw{} parameters commensurate with those obtained from an analysis of experimental configurations, improving significantly on previous methods.
-%The ability to efficiently grow configurations allows exploration of the structural basis of \lm’s law, where the commonly observed value of $p_6\approx0.4$ is presented as a balance between entropic and enthalpic factors. 
-%The deviations of ring areas from the ideal values are discussed and the relative insensitivity of the ring area to relatively strong distortions is highlighted.
-%	
-%	\item \textbf{Chapter 5}:
-%	
-%	\item \textbf{Chapter 6}:
-%	
-%	\item \textbf{Chapter 7}:
-%	
-%	\item \textbf{Chapter 8}:
-%
-%	\item \textbf{Chapter 9}:
-%	
-%	\item \textbf{Chapter 10}:
-%\end{itemize}
-	
  
