--- a/text/publications.tex
+++ b/text/publications.tex
@@ -8,16 +8,10 @@ The work presented in this thesis has led to the following publications:
 	
 	\item \textbf{Chapter 6}: \underline{D. Ormrod Morley}, A. L. Thorneywork, R. P. A. Dullens and M. Wilson, ``Generalized Network Theory of Physical Two\--Dimensional Systems'', Phys. Rev. E, \textbf{101}, 42309 (2020).
 	
-	\item \textbf{Chapter 7}: \underline{D. Ormrod Morley} and M. Wilson, ``Voronoi Diagrams in Quasi\--2D Hard Sphere Systems'', J. Stat. Mech., \textit{Accepted} (2020).
+	\item \textbf{Chapter 7}: \underline{D. Ormrod Morley} and M. Wilson, ``Voronoi Diagrams in Quasi\--2D Hard Sphere Systems'', J. Stat. Mech., 093201 (2020).
 	
-\end{itemize}
-
-\noindent In addition, the following papers are being prepared: 
-
-\begin{itemize}
+	\item \textbf{Chapter 8}: \underline{D. Ormrod Morley}, A. L. Goodwin and M. Wilson, ``Ring Structure of Selected Two\--Dimensional Procrystalline Lattices'', Phys. Rev. E, \textbf{102}, 062308 (2020).
 	
-	\item \textbf{Chapter 8}: \underline{D. Ormrod Morley}, A. L. Goodwin and M. Wilson, ``Ring Structure of Selected 2D Procrystalline Lattices'', \textit{Under review}.
-	
-	\item \textbf{Chapter 9}: \underline{D. Ormrod Morley}, P. S. Salmon and M. Wilson, ``Persistent Homology in Two\--Dimensional Atomic Networks'', \textit{In preparation}.
+	\item \textbf{Chapter 9}: \underline{D. Ormrod Morley}, P. S. Salmon and M. Wilson, ``Persistent Homology in Two\--Dimensional Atomic Networks'', J. Chem. Phys., \textbf{154}, 124109 (2021).
 	
 \end{itemize}
