--- a/thesis.tex
+++ b/thesis.tex
@@ -52,7 +52,7 @@
 % Either way, you'll have to choose and configure an appropriate bibliography format...
 
 % The science-type option: numerical in-text citation with references in order of appearance.
-\usepackage[style=phys, sorting=none, backend=biber, doi=false, isbn=false, url=false, arxiv=false, articletitle=true, biblabel=brackets, maxnames=5]{biblatex}
+\usepackage[style=phys, sorting=none, backend=biber, doi=false, isbn=false, url=true, arxiv=false, articletitle=true, biblabel=brackets, maxnames=5]{biblatex}
 \newcommand*{\bibtitle}{References}
 
 % The humanities-type option: author-year in-text citation with an alphabetical works cited.
